[package]
name = "neptune-types"
version = "0.1.0"
edition = "2024"

[features]

original-tests = []
tasm-object = []
# implements arbitrary::Arbitrary for various types
arbitrary-impls = ["dep:arbitrary", "dep:proptest-arbitrary-interop"]

# note: arbitrary, proptest, proptest-arbitrary-interop are duplicated in [dev-dependencies]
# because they are optional deps but required for unit tests.
# please ensure versions match in both sections.

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"], optional = true }
anyhow = "1.0.98"
itertools = "0.14.0"
num-rational = "0.4.2"
num-traits = "0.2.19"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive", "rc"] }
proptest = { version = "1.5", optional = true }
proptest-arbitrary-interop = { version = "0.1", optional = true }
# get-size2 = { version = "=0.1.3", features = ["derive"] }
#get-size2v2 = {package = "get-size2", version = "0.2", features = ["derive"] }
get-size2 = {version = "0.5", features = ["derive"] }
num-bigint = "0.4.6"
rand = "0.9.1"
chrono = "0.4.41"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
sha3 = "0.10.8"
aead = {version = "0.5.2", features = ["std"]}
aes-gcm = "0.10.3"
bech32 = "0.9"
triton-isa = "0.50.0"
twenty-first = "0.50.0"
bincode = "1.3"
clap = {version = "4.5.40", optional = true }
tasm-lib = {version = "0.50.0", optional = true}
serde_arrays = "0.2.0"

# deps for wasm32 target arch
[target.'cfg(target_arch = "wasm32")'.dependencies]

# convince getrandom to build for wasm target.
# note that there is also a flag in .cargo/config.toml
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandomv2 = { package="getrandom", version = "0.2", features = ["js"] }
wasm-bindgen = "=0.2.100"

[dev-dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
#proptest = { version = "1.5" }
#proptest-arbitrary-interop = { version = "0.1" }
#test-strategy = "0.3"
neptune-cash = { git = "https://github.com/Neptune-Crypto/neptune-core.git", rev = "dec1f267fc3e80bff7a97ca919deac1f49f596f4" }
#neptune-cash = { git = "https://github.com/dan-da/neptune-core.git", rev = "2353aec5adcb61c4da37f271aa82cec3fe6d191b" }
serde-json-wasm = "1.0.1"
serde_json = "1.0.140"

# [patch.crates-io]
# # twenty-first = {git="https://github.com/dan-da/twenty-first.git", rev = "d960e06"}
# twenty-first = {path="/home/danda/dev/neptune/twenty-first/twenty-first"}
